--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="icon" href="3DVRfavicon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
+
     :root {
       --accent: #00ffc8;
       --bg-hero: linear-gradient(to bottom, #2c3e50, #4ca1af);
@@ -106,7 +110,7 @@
     }
 
     .hero img {
-      width: clamp(240px, 60vw, 500px);
+      width: clamp(260px, 65vw, 520px);
       margin-bottom: 2rem;
     }
   </style>
@@ -133,97 +137,120 @@
     <p>Open-source tech for digital nomads, creators, and explorers.</p>
   </section>
 
-    <section class="subscribe" id="subscribe" style="background: var(--bg-subscribe);">
+  <section id="subscribe" style="background: var(--bg-subscribe);">
     <h2>Websites & Apps for $20/month</h2>
     <p>Get a personal site, app, or support package tailored to your vision. Clean, simple, open-source—powered by 3dvr.tech.</p>
     <a href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" class="sticky-cta" target="_blank">Subscribe Now</a>
   </section>
 
-  <section class="features" id="features" style="background: var(--bg-features);">
+  <section id="features" style="background: var(--bg-features);">
     <h2>What You Get</h2>
-    <ul style="list-style: none; padding: 0; font-size: 1.25rem;">
-      <li style="margin-bottom: 1rem; position: relative; padding-left: 2rem;">
-        <span style="position: absolute; left: 0; color: var(--accent); font-weight: bold;">✔</span>
-        Custom Websites & Landing Pages
-      </li>
-      <li style="margin-bottom: 1rem; position: relative; padding-left: 2rem;">
-        <span style="position: absolute; left: 0; color: var(--accent); font-weight: bold;">✔</span>
-        Mobile-Friendly App Designs
-      </li>
-      <li style="margin-bottom: 1rem; position: relative; padding-left: 2rem;">
-        <span style="position: absolute; left: 0; color: var(--accent); font-weight: bold;">✔</span>
-        Unlimited Tech Support Questions
-      </li>
-      <li style="margin-bottom: 1rem; position: relative; padding-left: 2rem;">
-        <span style="position: absolute; left: 0; color: var(--accent); font-weight: bold;">✔</span>
-        Personal Consultations
-      </li>
-      <li style="margin-bottom: 1rem; position: relative; padding-left: 2rem;">
-        <span style="position: absolute; left: 0; color: var(--accent); font-weight: bold;">✔</span>
-        Access to Our Builder Community
-      </li>
-    </ul>
+    <div style="display: flex; flex-wrap: wrap; gap: 1.5rem; justify-content: center; max-width: 1000px;">
+      <div style="background: rgba(255,255,255,0.1); padding: 1.5rem; border-radius: 12px; width: 280px; transition: transform 0.3s; cursor: pointer;">
+        <h3 style="font-size: 1.4rem; color: var(--accent); margin-bottom: 0.5rem;">✔ Websites & Landing Pages</h3>
+        <p style="font-size: 1rem;">Beautiful, responsive sites tailored to your brand and goals.</p>
+      </div>
+      <div style="background: rgba(255,255,255,0.1); padding: 1.5rem; border-radius: 12px; width: 280px; transition: transform 0.3s; cursor: pointer;">
+        <h3 style="font-size: 1.4rem; color: var(--accent); margin-bottom: 0.5rem;">✔ App Designs</h3>
+        <p style="font-size: 1rem;">Mobile-ready UI/UX designs that engage and convert.</p>
+      </div>
+      <div style="background: rgba(255,255,255,0.1); padding: 1.5rem; border-radius: 12px; width: 280px; transition: transform 0.3s; cursor: pointer;">
+        <h3 style="font-size: 1.4rem; color: var(--accent); margin-bottom: 0.5rem;">✔ Unlimited Tech Support</h3>
+        <p style="font-size: 1rem;">Ask anything—no limits. We're here to help you build.</p>
+      </div>
+      <div style="background: rgba(255,255,255,0.1); padding: 1.5rem; border-radius: 12px; width: 280px; transition: transform 0.3s; cursor: pointer;">
+        <h3 style="font-size: 1.4rem; color: var(--accent); margin-bottom: 0.5rem;">✔ Personal Consultations</h3>
+        <p style="font-size: 1rem;">We'll meet with you to brainstorm, refine, and launch ideas.</p>
+      </div>
+      <div style="background: rgba(255,255,255,0.1); padding: 1.5rem; border-radius: 12px; width: 280px; transition: transform 0.3s; cursor: pointer;">
+        <h3 style="font-size: 1.4rem; color: var(--accent); margin-bottom: 0.5rem;">✔ Builder Community</h3>
+        <p style="font-size: 1rem;">Join a community of creators, developers, and dreamers.</p>
+      </div>
+    </div>
+    <style>
+      #features div:hover {
+        transform: translateY(-8px);
+        background: rgba(255,255,255,0.15);
+      }
+    </style>
   </section>
 
-  <section class="testimonials" id="testimonials" style="background: var(--bg-testimonials);">
+  <section id="testimonials" style="background: var(--bg-testimonials);">
     <h2>What Our Clients Say</h2>
-    <div style="max-width: 900px; display: flex; flex-direction: column; gap: 1.5rem; margin-top: 2rem;">
-      <div style="background: rgba(255,255,255,0.15); padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
-        <strong><a href="https://www.brendadyestephens.com/" target="_blank" style="color: var(--accent); text-decoration: none;">SC Librarian</a></strong>:  
-        “3dvr.tech helped me create a modern and accessible site for my library project. Tech support has been amazing.”
+    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; margin-top: 2rem; max-width: 1000px;">
+      <div style="background: white; color: black; border-radius: 14px; padding: 1.5rem; width: 280px; box-shadow: 0 6px 14px rgba(0,0,0,0.2);">
+        <h3 style="font-size: 1.2rem; margin-bottom: 0.5rem;"><a href="https://www.brendadyestephens.com/" target="_blank" style="color: #222;">SC Librarian</a></h3>
+        <p>“3dvr.tech helped me create a modern and accessible site for my library project. Tech support has been amazing.”</p>
       </div>
-      <div style="background: rgba(255,255,255,0.15); padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
-        <strong><a href="https://cruisersgarage.com/" target="_blank" style="color: var(--accent); text-decoration: none;">Cruisers Garage</a></strong>:  
-        “They built a slick, mobile-friendly landing page for our custom motorcycles in no time. Highly recommend.”
+      <div style="background: white; color: black; border-radius: 14px; padding: 1.5rem; width: 280px; box-shadow: 0 6px 14px rgba(0,0,0,0.2);">
+        <h3 style="font-size: 1.2rem; margin-bottom: 0.5rem;"><a href="https://cruisersgarage.com/" target="_blank" style="color: #222;">Cruisers Garage</a></h3>
+        <p>“They built a slick, mobile-friendly landing page for our custom motorcycles in no time. Highly recommend.”</p>
       </div>
-      <div style="background: rgba(255,255,255,0.15); padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
-        <strong><a href="https://www.gif.edu.gt/" target="_blank" style="color: var(--accent); text-decoration: none;">GIF English</a></strong>:  
-        “We needed a site that could handle English lessons, scheduling, and videos. 3dvr.tech delivered exactly what we imagined.”
+      <div style="background: white; color: black; border-radius: 14px; padding: 1.5rem; width: 280px; box-shadow: 0 6px 14px rgba(0,0,0,0.2);">
+        <h3 style="font-size: 1.2rem; margin-bottom: 0.5rem;"><a href="https://www.gif.edu.gt/" target="_blank" style="color: #222;">GIF English</a></h3>
+        <p>“We needed a site that could handle English lessons, scheduling, and videos. 3dvr.tech delivered exactly what we imagined.”</p>
       </div>
-      <div style="background: rgba(255,255,255,0.15); padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
-        <strong><a href="https://www.sdvanlife.com/" target="_blank" style="color: var(--accent); text-decoration: none;">SD Vanlife</a></strong>:  
-        “Thomas and 3dvr.tech gave us the tools and guidance we needed to launch our van conversion business online.”
+      <div style="background: white; color: black; border-radius: 14px; padding: 1.5rem; width: 280px; box-shadow: 0 6px 14px rgba(0,0,0,0.2);">
+        <h3 style="font-size: 1.2rem; margin-bottom: 0.5rem;"><a href="https://www.sdvanlife.com/" target="_blank" style="color: #222;">SD Vanlife</a></h3>
+        <p>“Thomas and 3dvr.tech gave us the tools and guidance we needed to launch our van conversion business online.”</p>
       </div>
     </div>
   </section>
 
-  <section class="team" id="team" style="background: var(--bg-team);">
+  <section id="team" style="background: var(--bg-team);">
     <h2>Meet the Team</h2>
     <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; margin-top: 2rem;">
-      <div class="team-member" style="background: white; color: black; border-radius: 14px; box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2); padding: 1.5rem; text-align: center; width: 260px; cursor: pointer; transition: transform 0.3s;">
+      <div class="team-member" data-link="https://tmsteph.com">
         <img src="Thomas_Stephens.jpg" alt="Thomas Stephens" style="width: 110px; height: 110px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3 style="font-size: 1.3rem;">Thomas Stephens</h3>
         <p><strong>CEO / CTO / Founder</strong></p>
         <p>Visionary technologist creating the tools of tomorrow.</p>
       </div>
-      <div class="team-member" style="background: white; color: black; border-radius: 14px; box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2); padding: 1.5rem; text-align: center; width: 260px; cursor: pointer; transition: transform 0.3s;">
+      <div class="team-member" data-link="https://bodhi-lowski.vercel.app/">
         <img src="Bodhi_Lowski.jpg" alt="Bodhi Lowski" style="width: 110px; height: 110px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3 style="font-size: 1.3rem;">Bodhi Lowski</h3>
         <p><strong>Chief Marketing Officer</strong></p>
         <p>Building the brand through grassroots storytelling and growth.</p>
       </div>
-      <div class="team-member" style="background: white; color: black; border-radius: 14px; box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2); padding: 1.5rem; text-align: center; width: 260px; cursor: pointer; transition: transform 0.3s;">
+      <div class="team-member" data-link="https://david-martinez.vercel.app/">
         <img src="David_Martinez.jpg" alt="David Martinez" style="width: 110px; height: 110px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3 style="font-size: 1.3rem;">David Martinez</h3>
         <p><strong>Lead Developer</strong></p>
         <p>Crafting immersive 3D and web experiences with finesse.</p>
       </div>
-      <div class="team-member" style="background: white; color: black; border-radius: 14px; box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2); padding: 1.5rem; text-align: center; width: 260px; cursor: pointer; transition: transform 0.3s;">
+      <div class="team-member" data-link="https://esai-gamboa.vercel.app/">
         <img src="Esai_Gamboa.jpg" alt="Esai Gamboa" style="width: 110px; height: 110px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3 style="font-size: 1.3rem;">Esai Gamboa</h3>
         <p><strong>Developer</strong></p>
         <p>Frontend expert focused on clean, responsive interfaces.</p>
       </div>
-      <div class="team-member" style="background: white; color: black; border-radius: 14px; box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2); padding: 1.5rem; text-align: center; width: 260px; cursor: pointer; transition: transform 0.3s;">
+      <div class="team-member" data-link="https://brandon-adolfo.vercel.app/">
         <img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo" style="width: 110px; height: 110px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3 style="font-size: 1.3rem;">Brandon Adolfo</h3>
         <p><strong>Developer</strong></p>
         <p>Cross-platform mobile builder with an eye for design.</p>
       </div>
     </div>
+    <style>
+      .team-member {
+        background: white;
+        color: black;
+        border-radius: 14px;
+        padding: 1.5rem;
+        width: 260px;
+        box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2);
+        text-align: center;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        cursor: pointer;
+      }
+      .team-member:hover {
+        transform: translateY(-6px);
+        box-shadow: 0 12px 22px rgba(0, 0, 0, 0.3);
+      }
+    </style>
   </section>
 
-  <section class="about" id="about" style="background: var(--bg-about);">
+  <section id="about" style="background: var(--bg-about);">
     <h2>About 3dvr.tech</h2>
     <p style="max-width: 700px; margin: 1rem auto; font-size: 1.3rem;">
       We believe everyone deserves the tools to build their digital life.
@@ -238,17 +265,11 @@
   </footer>
 
   <script>
-    document.querySelectorAll('.team-member').forEach(member => {
-      const links = {
-        "Thomas Stephens": "https://tmsteph.com",
-        "Bodhi Lowski": "https://bodhi-lowski.vercel.app/",
-        "David Martinez": "https://david-martinez.vercel.app/",
-        "Esai Gamboa": "https://esai-gamboa.vercel.app/",
-        "Brandon Adolfo": "https://brandon-adolfo.vercel.app/"
-      };
-      const name = member.querySelector('h3')?.innerText;
-      if (name && links[name]) {
-        member.addEventListener('click', () => window.open(links[name], '_blank'));
+    // Clickable team cards
+    document.querySelectorAll('.team-member').forEach(card => {
+      const link = card.getAttribute('data-link');
+      if (link) {
+        card.addEventListener('click', () => window.open(link, '_blank'));
       }
     });
   </script>
